; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_br_available.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_filter-rar.c_br_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MemBitReader = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.MemBitReader*, i32)* @br_available to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @br_available(%struct.MemBitReader* %0, i32 %1) #0 {
  %3 = alloca %struct.MemBitReader*, align 8
  %4 = alloca i32, align 4
  store %struct.MemBitReader* %0, %struct.MemBitReader** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %6 = getelementptr inbounds %struct.MemBitReader, %struct.MemBitReader* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %22, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %12 = getelementptr inbounds %struct.MemBitReader, %struct.MemBitReader* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp sle i32 %10, %13
  br i1 %14, label %20, label %15

15:                                               ; preds = %9
  %16 = load %struct.MemBitReader*, %struct.MemBitReader** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i64 @br_fill(%struct.MemBitReader* %16, i32 %17)
  %19 = icmp ne i64 %18, 0
  br label %20

20:                                               ; preds = %15, %9
  %21 = phi i1 [ true, %9 ], [ %19, %15 ]
  br label %22

22:                                               ; preds = %20, %2
  %23 = phi i1 [ false, %2 ], [ %21, %20 ]
  %24 = zext i1 %23 to i32
  ret i32 %24
}

declare dso_local i64 @br_fill(%struct.MemBitReader*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
